updated footer, fixed layout issues

--- a/front-end/src/scss/components/_footer.scss
+++ b/front-end/src/scss/components/_footer.scss
@@ -9,17 +9,50 @@
       transform: scaleY(1) scaleX(-1);
       margin-bottom: -1px;
     }
+
+    .hero_rectangle {
+      height: 60vh;
+    }
   }
 
   &__content {
     position: absolute;
-    top: 10rem;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 2;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
 
     .footer__logoContainer {
-      max-width: 20rem;
-      margin: 0 auto;
-      margin-left: 1rem;
+      max-width: 60rem;
+    }
+
+    .icon__container {
+      .footer__icon {
+        display: flex;
+        align-items: center;
+        gap: var(--space-xs);
+        font-size: var(--step-0);
+      }
+    }
+
+    .footnotes {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+      .copywrite {
+        display: flex;
+        margin-left: 1rem;
+
+        .copyicon {
+          margin-right: -1rem;
+        }
+      }
     }
   }
 }
