--- a/front-end/src/scss/layout/_grid.scss
+++ b/front-end/src/scss/layout/_grid.scss
@@ -6,7 +6,6 @@
   margin-inline: auto;
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
-  gap: 2rem;
 
   > * {
     grid-column: col-start / span 12;
